syntax = "proto3";

import "./group.proto";

package grabber;

service BookService {
    rpc ListGroupBooks (ListGroupBooksRequest) returns (ListBooksResponse) {}
    rpc ListBookEntries (ListBookEntriesRequest) returns (ListEntriesResponse) {}
}

message Book {
    string type = 1; // books
    string id = 2;
    message Attributes {
        string code = 1;
    }
    Attributes attributes = 3;
    message Relationships {
        GroupRelationship group = 1;
    }
    Relationships relationships = 4;
}

message ListGroupBooksRequest {
    string academy_id = 1;
    int32 group_id = 2;
}

message ListBooksResponse {
    repeated Book data = 1;
    message Included {
    }
}

// Entries

message Entry {
    string type = 1; // entries
    string id = 2;
    message Attributes {
        int32 semester = 1;
        string subject = 2;
        string mark = 3;
        int32 hours = 4;
        string teacher = 5;
        string unit = 6;
        string type = 7;
    }
    Attributes attributes = 3;
    message Relationships {
    }
    Relationships relationships = 4;
}

message ListBookEntriesRequest {
    int32 id = 1;
    int32 semester = 2;
    string academy_id = 3;
}

message ListEntriesResponse {
    repeated Entry data = 1;
    message Included {
    }
}

